# IR2117

./: hello_world.cpp  tb3.rviz
MATH/: q  quadratical.cpp  test  triangulo.cpp
SUM/: sum  sum.cpp  sum_ab  sum_ab.cpp
parcial_ws/bag_files/rosbag2_2025_02_23-23_21_34/: metadata.yaml  rosbag2_2025_02_23-23_21_34_0.db3
parcial_ws/numbers.bag/: metadata.yaml
parcial_ws/src/angulos/: CMakeLists.txt  package.xml
parcial_ws/src/angulos/launch/: brujula.py
parcial_ws/src/angulos/src/: roller.cpp
parcial_ws/src/factorial/: CMakeLists.txt  package.xml
parcial_ws/src/factorial/src/: factorial_client.cpp  factorial_server.cpp
parcial_ws/src/factorial_interfaces/: CMakeLists.txt  package.xml
parcial_ws/src/factorial_interfaces/action/: Factorial.action
parcial_ws/src/number/: CMakeLists.txt  package.xml
parcial_ws/src/number_interface/: CMakeLists.txt  package.xml
parcial_ws/src/number_interface/action/: Number.action
parcial_ws/src/robot_trajectory/: CMakeLists.txt  package.xml
parcial_ws/src/robot_trajectory/src/: circle_odom.cpp  square.cpp  square_odom.cpp
parcial_ws/src/spk_list/: CMakeLists.txt  package.xml
parcial_ws/src/spk_list/src/: listener.cpp  speaker.cpp
parcial_ws/src/stats/: CMakeLists.txt  package.xml
parcial_ws/src/stats/src/: mean.cpp
parcial_ws/src/suma/: CMakeLists.txt  package.xml
parcial_ws/src/suma/src/: publisher.cpp  sumador.cpp
ros2_ws/src/: publisher.cpp  subscriber.cpp
ros2_ws/src/action_tutorials_cpp/: CMakeLists.txt
ros2_ws/src/action_tutorials_cpp/src/: action_client.cpp  action_server.cpp
ros2_ws/src/action_tutorials_interfaces/: CMakeLists.txt
ros2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ros2_ws/src/examples/: CMakeLists.txt  package.xml
ros2_ws/src/examples/src/: publisher.cpp  subscriber.cpp
ros2_ws/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/learning_tf2_cpp/src/: turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
ros2_ws/src/minmax/: CMakeLists.txt  package.xml
ros2_ws/src/minmax/src/: max.cpp  min.cpp  minmax.cpp
ros2_ws/src/stats/: CMakeLists.txt  package.xml
ros2_ws/src/stats/src/: mean.cpp  median.cpp  mode.cpp
ros2_ws/src/sum/: CMakeLists.txt  package.xml
ros2_ws/src/sum/src/: sum.cpp  suma.cpp
tb3_ws/: sudo
tb3_ws/olympic/: package.xml
tb3_ws/rosbag2_2025_03_20-13_13_59/: metadata.yaml  rosbag2_2025_03_20-13_13_59_0.db3
tb3_ws/src/intrusion/: CMakeLists.txt  package.xml
tb3_ws/src/intrusion/launch/: monitor.launch.py
tb3_ws/src/intrusion/src/: monitor.cpp
tb3_ws/src/obstacles/: CMakeLists.txt  package.xml
tb3_ws/src/obstacles/launch/: detector_test.launch.py  gazebo_avoidance.launch.py  triple_detector.launch.py  webots_avoidance.launch.py
tb3_ws/src/obstacles/src/: avoidance.cpp  detector.cpp
tb3_ws/src/olympic/: CMakeLists.txt  package.xml
tb3_ws/src/olympic_interfaces/: CMakeLists.txt
tb3_ws/src/persons/: CMakeLists.txt  package.xml
tb3_ws/src/robot_trajectory/: CMakeLists.txt  package.xml
urdf/: 01-myfirst.urdf  02-myfirst.urdf  04-materials.urdf
(+18 files in other folders)
